拆分: 81个原子知识点独立成文，长文保留深度+链接